# OpenGL_4RVJV_2024-2025

./: .gitignore  CMakeLists.txt  LocalConfig.cmake  LocalConfig.cmake.example  README.md  main.cpp
shader/: basic.vs.glsl
src/: app.cpp  app.h
